@@ -1,3 +1,8 @@
+2007-08-12  Andreas Røsdal  <andreasr@gnome.org>
+
+	* src/lib/scene-cairo/__init__.py: Mark board numbers for translation,
+	reported in Bug #471238.
+
 2007-11-17  Robert Ancell  <robert.ancell@gmail.com>
 
 	* lib/gtkui/gtkui.py: Set toolbar style to default system style (Glade 2 bug) (Bug #497504)
